Feat: Add 'react-redux' to handle language selection
Updated 'LanguageSelector' component

--- a/client/src/styles/checkout.css
+++ b/client/src/styles/checkout.css
@@ -152,8 +152,8 @@
   }
 }
 
-#payment-form > @media only screen and (max-width: 600px) {
-  form {
+#payment-form > form {
+  @media only screen and (max-width: 600px) {
     width: 80vw;
   }
 }
